test/cases/compile_errors/invalid_underscore_placement_in_float_literal-12.zig
fn main() void {
    var bad: f128 = 1_x0.0;
    _ = bad;
}

// error
//
// :2:23: error: invalid digit 'x' for decimal base
